--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
 language: python
 python: "2.7"
 
-install:
-    - sudo ./env-setup
-	
+install: "sudo ./env-setup"
+
 notifications:
     email: false
