Added apt-get update to .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
-language: python
+language: C++
 python: "2.7"
 
-install: "sudo ./env-setup"
+install: 
+    - "sudo apt-get upgrade"
+    - "sudo ./env-setup"
 
 notifications:
   email: false
