Added gcc-4.8 install to start of script

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
 language: C++
-python: "2.7"
 
 install: 
-    - "sudo apt-get upgrade"
+    - "sudo apt-get install gcc-4.8"
     - "sudo ./env-setup"
 
 notifications:
