--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,19 @@
 language: C++
 
 install: 
-    - "sudo ./env-setup"
+  - "sudo chmod +rwxrwxrwx $PWD -R"
+  - "mkdir .status"
+  - "sudo ./setup/install-dependencies"
+  - "sudo ./setup/install-npm"
+  - "sudo ./setup/install-pyjs"
+  - "sudo ./setup/install-jsil"
+  - "sudo ./setup/install-emscripten"
+  - "sudo ./setup/install-dragome"
+  - "sudo ./setup/install-ghcjs"
+  - "sudo ./env-setup" 
 
 notifications:
-    email: false
+  email: false
   
 os: linux
 dist: trusty
