Added job to show number of processors on build instance

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: C++
 
 install: 
+  - "nproc --all"
   - "sudo chmod +rwxrwxrwx $PWD -R"
   - "mkdir .status"
   - "sudo ./setup/install-dependencies"
