--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,12 @@ language: Haskell
 
 ghc: "7.10"
 
+addons:
+  apt:
+    packages:
+      - haskell-platform
+      - cabal-install
+	  
 install: 
   - "nproc --all"
   - "sudo chmod +rwxrwxrwx $PWD -R"
