--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,5 @@
-language: Haskell
+language: C++
 
-ghc: "7.10"
-
-addons:
-  apt:
-    packages:
-      - "haskell-platform"
-      - "cabal-install"
-  
 install: 
   - "nproc --all"
   - "sudo chmod +rwxrwxrwx $PWD -R"
@@ -17,8 +9,8 @@ install:
   - "sudo ./setup/install-pyjs"
   - "sudo ./setup/install-jsil"
   - "sudo ./setup/install-dragome"
-  - "sudo ./setup/install-ghcjs"
   - "sudo ./setup/install-emscripten"
+  - "sudo ./setup/install-ghcjs"
   - "sudo ./env-setup" 
   
 script:
